Move the plugin to the FormattingService API.
Also support optimizing imports, using the ImportOptimizer API.

PiperOrigin-RevId: 513562756