@@ -15,7 +15,7 @@
  */
 
 plugins {
-  id "org.jetbrains.intellij" version "1.4.0"
+  id "org.jetbrains.intellij" version "1.13.0"
 }
 
 repositories {
@@ -23,7 +23,7 @@ repositories {
 }
 
 ext {
-  googleJavaFormatVersion = "1.15.0"
+  googleJavaFormatVersion = "1.16.0"
 }
 
 apply plugin: "org.jetbrains.intellij"
@@ -35,14 +35,14 @@ targetCompatibility = JavaVersion.VERSION_11
 intellij {
   pluginName = "google-java-format"
   plugins = ["java"]
-  version = "221.3427-EAP-CANDIDATE-SNAPSHOT"
+  version = "2021.3"
 }
 
 patchPluginXml {
   pluginDescription = "Formats source code using the google-java-format tool. This version of " +
                       "the plugin uses version ${googleJavaFormatVersion} of the tool."
   version.set("${googleJavaFormatVersion}.0")
-  sinceBuild = "203"
+  sinceBuild = "213"
   untilBuild = ""
 }
 
@@ -50,6 +50,16 @@ publishPlugin {
   token = project.ext.properties.jetbrainsPluginRepoToken
 }
 
+tasks.withType(Test).configureEach {
+  jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"
+  jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
+  jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+  jvmArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+}
+
 dependencies {
   implementation "com.google.googlejavaformat:google-java-format:${googleJavaFormatVersion}"
+  testImplementation "junit:junit:4.13.2"
+  testImplementation "com.google.truth:truth:1.1.3"
+  testImplementation "com.google.truth.extensions:truth-java8-extension:1.1.3"
 }
